# ya-runtime-vm

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  1  1.c  Cargo.toml  README.md  install.sh  task.txt  vm-agent.proto
.github/workflows/: add-to-core-team-project.yml  build.yml  release.yml
conf/: ya-runtime-vm.json
gvmkit/: Cargo.toml
gvmkit/src/: docker.rs  image_builder.rs  main.rs  progress.rs  rwbuf.rs  upload.rs
init-container/: .gitignore  Makefile  init.c  loader.c  modules.md  proto.h  startup.sh
init-container/include/: communication.h  process_bookkeeping.h  proto.h
init-container/proto/: Makefile  demo.c  pb.h  vm-agent.pb.c  vm-agent.pb.h
init-container/src/: Makefile  communication.c  cyclic_buffer.c  init.c
init-container/tests/: cyclic_buffer.c
poc/: gvmkit  gvmkit.sh
poc/gvmkit/: Cargo.toml
poc/gvmkit/src/: docker.rs  image.rs  image_builder.rs  main.rs  rwbuf.rs
poc/runtime/: initramfs-virt  vmlinuz-virt  vmrt
qemu/: Dockerfile  Makefile  copy_img
rinit/: Cargo.toml  Makefile  build.rs
rinit-protos/: Cargo.toml  build.rs
rinit-protos/protos/: rinit.proto
rinit-protos/src/: lib.rs
rinit/extern-libs/busybox/: Dockerfile  config  mkfs.ext2
rinit/extern-libs/src/: seccomp.c
rinit/src/: enums.rs  fs.rs  handlers.rs  initramfs.rs  io.rs  kernel_modules.rs  main.rs  network.rs  pre_exec.rs  process.rs  storage.rs  utils.rs
runtime/: Cargo.toml  build.rs
runtime/conf/: ya-runtime-vm.json  ya-runtime-vm.json.in
runtime/examples/: Dockerfile  commands.rs  common.rs  direct.rs  fs_benchmark.rs  min_run.rs  network.rs  out.txt  raw_socket_comm.rs
runtime/image/: rootfs.qcow2  self-test.gvmi
runtime/init-container/: .clang-format  .gitignore  1  1.c  Makefile  install.sh  run.py  run.sh  self_test.sh  self_test_orig.sh
runtime/init-container-epoll/: .clang-format  .gitignore
runtime/init-container-epoll/include/: proto.h
runtime/init-container-epoll/src/: common.c  communication_win_p9.c  init.c
runtime/init-container/include/: common.h  communication.h  communication_p9.h  communication_win_p9.h  cyclic_buffer.h  forward.h  init-seccomp.h  network.h  process_bookkeeping.h  proto.h
runtime/init-container/rinit/: Cargo.toml
runtime/init-container/rinit/src/: enums.rs  handlers.rs  initramfs.rs  io.rs  kernel_modules.rs  main.rs  network.rs  process.rs  storage.rs
runtime/init-container/src/: common.c  communication.c  communication_p9.c  communication_win_p9.c  cyclic_buffer.c  forward.c  init.c  network.c  process_bookkeeping.c  seccomp.c
runtime/init-container/tests/: .gitignore  cyclic_buffer.c
runtime/init-container_classic/include/: communication.h  communication_win_p9.h
runtime/poc/runtime/: efi-virtio.rom  ubuntu.gvmi  vmrt
runtime/poc/squashfs/: ubuntu.gvmi
runtime/src/: arg_builder.rs  cpu.rs  demux_socket_comm.rs  deploy.rs  detect_pci.rs  gpu.rs  guest_agent_9p.rs  guest_agent_comm.rs  lib.rs  local_notification_handler.rs  local_runtime_handler.rs  local_spawn_vm.rs  main.rs  raw_socket_comm.rs  response_parser.rs  response_parser_9p.rs  self_test.rs  vm.rs  vm_runner.rs  vmrt.rs  volume.rs
runtime/src/qcow2_min/: 10k.header  mod.rs
scripts/: gen_image.py
self_test_img/: Cargo.toml  Dockerfile  Makefile
self_test_img/src/: main.rs
src/: guest_agent_comm.rs  main.rs  response_parser.rs
