[workspace]
members = ["runtime", "rinit"]
resolver = "2"

[workspace.dependencies]
ya-runtime-sdk = { git = "https://github.com/golemfactory/ya-runtime-sdk.git", rev = "0395b0c704ef644d7f0554ac41e319f03b11c068" }
ya-runtime-api = { git = "https://github.com/golemfactory/yagna.git", rev = "2222cadeed58ecc44295092fcb0bc9ffba8a3722" }
ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "44746845a559d40faa2a81d41c6f663d38361286" }
anyhow = "1.0"
async-io = "2.3.4"
async-process = { path = "../async-process" }
bollard-stubs = "1.41.0"
crc = "1.8.1"
futures = "0.3.31"
libc = "0.2.159"
log = "0.4.22"
nix = { version = "0.29.0", features = [
  "mount",
  "fs",
  "socket",
  "signal",
  "event",
  "ioctl",
  "net",
  "sched",
  "process",
  "user",
] }
# "crossbeam-channel" and "macos_fsevent" are default features.
# Remove `macos_fsevent` if `macos` build will get dropped.
notify = { version = "6.1.1", features = [
  "crossbeam-channel",
  "macos_fsevent",
] }
prost = "0.13.3"
prost-build = "0.13.3"
prost-types = "0.13.3"
rand = "0.8.5"
raw-cpuid = "10.7.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
smol = "2.0.2"
stderrlog = "0.6.0"
strip-ansi-escapes = "0.1.1"
structopt = "0.3.26"
tokio = { version = "1.40.0", features = [
  "fs",
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
  "net",
] }
tokio-byteorder = "0.3"
url = "2.5.2"
uuid = { version = "1.10.0", features = ["v4"] }
