[package]
name = "gvmkit"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0"
bollard = "0.6"
bytes = "0.5"
crc = "1.8"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
env_logger = "0.7"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tar = "0.4"
tokio = { version = "0.2", features = ["full"] }
