[package]
name = "gvmkit"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
actix-rt = "1.0"
anyhow = "1.0"
awc = "2.0"
bollard = "0.8"
bytes = "0.5"
crc = "1.8"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
env_logger = "0.7"
hex = "0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.9"
structopt = "0.3"
tar = "0.4"
tokio = { version = "0.2", features = ["macros"] }
trust-dns-resolver = { version = "0.19", features = ["mdns"] }
