[package]
name = "gvmkit"
version = "0.1.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
actix-rt = "2.7.0"
anyhow = "1.0"
awc = "3.0.0"
bollard = "0.11.1"
bytes = "1.1.0"
crc = "2.1.0"
env_logger = "0.9.0"
futures = "0.3"
futures-util = "0.3"
hex = "0.4"
indicatif = "0.16.2"
lazy_static = "1.4.0"
log = "0.4"
percent-encoding = "2.1"
regex = "1.4"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10.1"
structopt = "0.3"
tar = "0.4"
tokio = { version = "1.21.2", features = ["macros"] }
trust-dns-resolver = { version = "0.22" }
