[package]
name = "ya-runtime-vm"
version = "0.5.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2021"
license = "GPL-3.0"

[package.metadata.deb]
assets = [
    [
        "target/release/ya-runtime-vm",
        "usr/lib/yagna/plugins/ya-runtime-vm/",
        "755",
    ],
    [
        "conf/ya-runtime-vm.json",
        "usr/lib/yagna/plugins/",
        "644",
    ],
    # self-test.gvmi is downloaded by .github/workflows/release.yml from https://github.com/golemfactory/ya-self-test-img/releases
    [
        "image/self-test.gvmi",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],

    [
        "poc/runtime/vmrt",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "755",
    ],
    [
        "poc/runtime/vgabios-stdvga.bin",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],
    [
        "poc/runtime/bios-256k.bin",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],
    [
        "poc/runtime/kvmvapic.bin",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],
    [
        "poc/runtime/linuxboot_dma.bin",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],
    [
        "poc/runtime/efi-virtio.rom",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],

    [
        "../rinit/initramfs.cpio.gz",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],
    [
        "../rinit/vmlinuz-virt",
        "usr/lib/yagna/plugins/ya-runtime-vm/runtime/",
        "644",
    ],
]

[dependencies.ya-runtime-sdk]
workspace = true
features = ["macros", "logger"]

[dependencies]
anyhow.workspace = true
bollard-stubs.workspace = true
crc.workspace = true
futures.workspace = true
log.workspace = true
notify.workspace = true
prost.workspace = true
rand.workspace = true
raw-cpuid.workspace = true
serde_json.workspace = true
serde.workspace = true
strip-ansi-escapes.workspace = true
structopt.workspace = true
tokio-byteorder.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
ya-client-model.workspace = true

[dev-dependencies]
env_logger = "0.10"
tempdir = "0.3.7"
pnet = "0.33"

[build-dependencies]
anyhow = "1.0"

[lib]
name = "ya_runtime_vm"
path = "src/lib.rs"

[[bin]]
name = "ya-runtime-vm"
path = "src/main.rs"
